alignment fix with drag-drop

--- a/public_html/storage101.css
+++ b/public_html/storage101.css
@@ -7,17 +7,6 @@ and open the template in the editor.
     Created on : Apr 1, 2017, 8:53:02 PM
     Author     : Nishant
 */
-
-
-/*body{
-    width: 40px;
-    height: 40px;
-    size: 450px 400px;
-    padding: 1px;
-    background-image: url("img/4-1-1-Background.png") ;
-    background-size: 800px 400px;
-    background-repeat: no-repeat;
-    }*/
 html, body{
     width: 100%;
     height: 100%;
@@ -32,27 +21,31 @@ html, body{
     background-size: 800px 400px;
     background-repeat: no-repeat;
 }
-    
+.draggable{
+    cursor: move;
+}    
 .rotated-image {
   -webkit-transform: rotate(20deg);
           transform: rotate(20deg);
 }
     
-#intro-bucket{
-    position: absolute;
-    top: 60px;
-    left: 220px;
-    content: url("img/4-1-1-Intro Bucket.png") ;
-    height: 300px;
+#front{
+    position: relative;
     width: 360px;
+    margin: 0 auto;
+    top: 50px;    
+}
+#intro-bucket{
+    content: url("img/4-1-1-Intro Bucket.png") ;
+    height: 100%;
+    width: 100%;
         }
     
 #play{
     position: absolute;
-    top: 165px;
-    left: 350px;
+    top: 120px;
+    left: 130px;
     content: url("img/4-1-1-Play-Button.png") ;
-    height: 40px;
     width: 100px;
         }
 
@@ -189,7 +182,10 @@ html, body{
     height: 20px;
     width: 30px;
         }
-
+#brush.placedOnShelf{
+    height: 25px;
+    width: 60px;    
+}
 #gloves{
     position: absolute;
     top: 10px;
@@ -198,7 +194,10 @@ html, body{
     height: 35px;
     width: 40px;
         }
-
+#gloves.placedOnShelf{
+    height: 55px;
+    width: 60px;
+}
 #dp{
     position: absolute;
     top: 10px;
@@ -207,7 +206,11 @@ html, body{
     height: 28px;
     width: 30px;
         }
-
+#dp.placedOnShelf{
+    height: 50px;
+    width: 40px;    
+    content: url("img/4-1-1-fullsize-dust-pan.png");
+}
 #mop{
     position: absolute;
     top: 15px;
@@ -216,7 +219,12 @@ html, body{
     height: 100px;
     width: 60px;
         }
-        
+#mop.placedOnShelf{
+    top: -90px!important;
+    height: 200px;
+    width: 70px;
+    content: url("img/4-1-1-fullsize-mop.png") ;    
+}        
 #vacuum{
     position: absolute;
     top: 45px;
@@ -225,7 +233,11 @@ html, body{
     height: 70px;
     width: 80px;
         }
-        
+#vacuum.placedOnShelf{
+    height: 100px;
+    width: 100px;
+    content: url("img/4-1-1-full-size-vacuum.png") ;    
+}        
 #apc{
     position: absolute;
     top: 10px;
@@ -234,7 +246,11 @@ html, body{
     height: 60px;
     width: 30px;
         }
-        
+#apc.placedOnShelf{
+    width: 40px;
+    height: 90px;
+    content: url("img/4-1-1-fullsize-cleaner.png") ;
+}
 #bs{
     position: absolute;
     top: 50px;
@@ -243,7 +259,11 @@ html, body{
     height: 50px;
     width: 20px;
         }
-        
+#bs.placedOnShelf{
+    height: 60px;
+    width: 30px; 
+    content: url("img/4-1-1-fullsize-baking-soda.png") ;   
+}        
 #bleach{
     position: absolute;
     top: 10px;
@@ -252,7 +272,11 @@ html, body{
     height: 60px;
     width: 28px;
         }
-        
+#bleach.placedOnShelf{
+    height: 70px;
+    width: 35px; 
+    content: url("img/4-1-1-fullsize-bleach.png") ;   
+}        
 #broom{
     position: absolute;
     top: 10px;
@@ -261,7 +285,12 @@ html, body{
     height: 105px;
     width: 55px;
         }
-        
+#broom.placedOnShelf{
+    top: -140px!important;
+    height: 250px;
+    width: 80px;
+    content: url("img/4-1-1-fullsize-broom.png") ;    
+}        
         
 #colths{
     position: absolute;
@@ -271,7 +300,11 @@ html, body{
     height: 30px;
     width: 30px;
         }
-              
+#colths.placedOnShelf{
+    height: 50px;
+    width: 50px;
+    content: url("img/4-1-1-fullsize-cloths.png") ;
+}              
 #bucket{
     position: absolute;
     top: 45px;
@@ -280,7 +313,11 @@ html, body{
     height: 45px;
     width: 45px;
         }
-        
+#bucket.placedOnShelf{
+    content: url("img/4-1-1-fullsize-bucket.png") ;
+    width: 65px;
+    height: 65px;
+} 
 #duster{
     position: absolute;
     top: 95px;
@@ -289,7 +326,11 @@ html, body{
     height: 20px;
     width: 55px;
         }
-        
+#duster.placedOnShelf{
+    height: 30px;
+    width: 100px;
+    content: url("img/4-1-1-fullsize-brush.png") ;    
+}        
 #ld{
     position: absolute;
     top: 10px;
@@ -298,7 +339,10 @@ html, body{
     height: 60px;
     width: 40px;
         }
-        
+#ld.placedOnShelf{
+    width: 60px;
+    height: 90px;
+}        
 #pt{
     position: absolute;
     top: 45px;
@@ -307,7 +351,11 @@ html, body{
     height: 50px;
     width: 30px;
         }
-        
+#pt.placedOnShelf{
+    height: 70px;
+    width: 50px; 
+    content: url("img/4-1-1-full-size-paper-towel.png") ;   
+}        
 #soap{
     position: absolute;
     top: 60px;
@@ -316,7 +364,11 @@ html, body{
     height: 55px;
     width: 15px;
         }
-        
+#soap.placedOnShelf{
+    height: 72px;
+    width: 24px;
+    content: url("img/4-1-1-fullsize-soap.png") ;
+}        
 #sponges{
     position: absolute;
     top: 75px;
@@ -325,7 +377,11 @@ html, body{
     height: 40px;
     width: 35px;
         }      
-        
+#sponges.placedOnShelf{
+    height: 50px;
+    width: 50px; 
+    content: url("img/4-1-1-fullsize-sponges.png") ;   
+}        
 #tb{
     position: absolute;
     top: 10px;
@@ -334,7 +390,11 @@ html, body{
     height: 38px;
     width: 25px;
         }
-        
+#tb.placedOnShelf{
+    height: 60px;
+    width: 30px; 
+    content: url("img/4-1-1-full-size-toilet-brush.png") ;   
+}        
 #gb{
     position: absolute;
     top: 10px;
@@ -343,3 +403,63 @@ html, body{
     height: 35px;
     width: 35px;
         } 
+#gb.placedOnShelf{
+    width: 60px;
+    height: 60px;
+    content: url("img/4-1-1-full-size-garbage-bags.png") ;
+}
+.droppable-container{
+    position: absolute;
+    width: 800px;
+    height: 400px;
+    top: 0;    
+}
+#shelf-1{
+    position: absolute;
+    width: 370px;
+    height: 100px;
+    top: 15px;
+    left: 14px;
+}
+#shelf-2{
+    position: absolute;
+    width: 130px;
+    height: 270px;
+    top: 130px;
+    left: 14px;
+}
+#shelf-3{
+    position: absolute;
+    width: 224px;
+    height: 86px;
+    top: 130px;
+    left: 158px;
+}
+#shelf-4{
+    position: absolute;
+    width: 224px;
+    height: 86px;
+    top: 230px;
+    left: 158px;
+}
+#shelf-5{
+    position: absolute;
+    width: 224px;
+    height: 70px;
+    top: 330px;
+    left: 158px;
+}
+#shelf-6{
+    position: absolute;
+    width: 370px;
+    height: 80px;
+    top: 95px;
+    right: 14px;
+}
+#shelf-7{
+    position: absolute;
+    width: 370px;
+    height: 90px;
+    top: 190px;
+    right: 14px;
+}
